@@ -54,6 +54,13 @@ CVS code -
 	  and NANO_APPEND_KEY are.  Changes to shortcut_init(), usage(),
 	  main(), search_init(), nanorc.sample, nano.1, nanorc.5,
 	  nano.texi, etc. (DLR)
+	- Various cleanups in chars.c.  Remove some unnecessary ctype
+	  wrappers, change other ctype wrappers to take wint_t instead
+	  of wchar_t, and rename some functions for consistency.  Changes
+	  to is_alnum_mbchar(), is_blank_char() (renamed nisblank()),
+	  is_blank_mbchar(), is_blank_wchar() (renamed niswblank()), and
+	  is_cntrl_wchar(), etc.; removal of is_alnum_char() and
+	  is_alnum_wchar(). (DLR)
 - chars.c:
   make_mbstring()
 	- Change erroneous ENABLE_EXTRA #ifdef to NANO_EXTRA to fix a
@@ -145,6 +152,8 @@ CVS code -
 	  processing, and rename to disable_extended_io(). (DLR)
 - nano.h:
 	- Add macro charset(), a wrapper that calls memset(). (DLR)
+	- Readd #defines for the isblank() and iswblank() equivalents.
+	  (DLR)
 - rcfile.c:
   color_to_int()
 	- Since colorname's being NULL is handled elsewhere now, assert
